# cju-coin

./: .gitignore  README.md  pyproject.toml  run_mining.sh
migrations/versions/: c15b5c5c688e_.py
src/: __init__.py  blockchain.db  blockchain.py  config.py  mining.py  models.py  secret.py  transfer.py
src/static/css/: mining.css
src/static/js/: mining.js  transfer.js
src/templates/: base.html  index.html  mining.html  nav_bar.html
src/utils/: blockchain_util.py
src/views/: main.py
