
[tool.poetry]
name = "blockchain lecture"
version = "0.1.0"
description = ""
authors = ["cyberprophet"]

[tool.poetry.dependencies]
python = "^3.10"
virtualenv = "^20.29.3"
Flask = "2.2.3"
Flask-Migrate = "4.0.4"
Werkzeug = "2.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
